src/style.css
:root {
  --color-background: #212121;
  --color-copy: #E3CEBF;
  --font-size-h1: 3.052rem;
  --font-size-h2: 2.441rem;
  --font-size-h3: 1.953rem;
  --font-size-h4: 1.563rem;
  --font-size-h5: 1.25rem;
  --font-size-md: 16px;
  --font-size-sm: 0.8rem;
}

body {
  margin: 0;
  background: var(--color-background);
  color: var(--color-copy);
  font-family: 'Roboto', sans-serif;
  font-size: var(--font-size-md);
}

a {
  color: inherit;
  text-decoration: none;
}

#content {
  display: grid;
  place-items: center;
}

#content > div {
  display: flex;
  align-items: center;
  position: relative;
  width: calc(100vw - (2 * 155px));
  max-width: 970px;
  height: 100vh;
  margin: 0 155px;
}

@media (max-width: 1050px) {
  #content > div {
    width: calc(100vw - (2 * 30px));
    margin: 60px 30px;
  }
}

